--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
 __pycache__/
+
+.vscode/
+.env/
 env/
+
 ffmpeg/
 
-env.sh
+# Distribution / packaging
+.Python
+env/
+.env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
