--- a/setup.cfg
+++ b/setup.cfg
@@ -48,8 +48,8 @@ exclude =
 
 
 [mypy]
-no_implicit_optional = True
-warn_redundant_casts = True
-warn_unused_ignores = False
-pretty = True
-show_error_codes = True
+no_implicit_optional=True
+warn_redundant_casts=True
+warn_unused_ignores=False
+pretty=True
+show_error_codes=True
